--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>dat3-startcode</name>
+    <name>dat3-SP</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -16,11 +16,11 @@
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
         <!-- IMPORTANT-1: If your server uses https (via NGINX) use your DOMAIN NAME and https below: -->
         <!-- IMPORTANT-2: Observe we are NOT using /manager/html but /manager/text for script uploads -->
-        <remote.server>Your domain name here</remote.server>
+        <remote.server>https://qaws.dk/manager/text</remote.server>
 
         <!-- TODO: Add your own database name -->
         <!-- IMPORTANT-1: The database should exist on your droplet -->
-        <db.name>Your database name here</db.name>
+        <db.name>SP</db.name>
     </properties>
     
     <dependencies>
